--- a/epicodeCorso/esercizi/week_2/day1/assets/css/prima.css
+++ b/epicodeCorso/esercizi/week_2/day1/assets/css/prima.css
@@ -28,8 +28,8 @@ img {
   width: 30%;
 }
 
-a {
-  display: block;
+.link a {
+  display: inline-block;
   color: white;
   text-decoration: none;
 }
