--- a/Projects/Lista della Spesa/assets/css/LSstyle.css
+++ b/Projects/Lista della Spesa/assets/css/LSstyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Tourney:wght@600&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -8,76 +10,101 @@ body {
     background-attachment: fixed;
 }
 
-
 div {
     margin-top: 15%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
 }
+
 
 h1 {
     display: flex;
     justify-content: center;
+    font-family: 'Tourney', cursive;
 }
 
 fieldset {
     background-color: aliceblue;
     padding: 20px 20px 20px 20px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
 }
+
 
 input {
     flex: 1;
     padding: 10px;
     border: none;
     border-radius: 5px;
-    margin-right: 10px;
-    width: 500px;
+
 }
 
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
 
-button {
+
+#addBtn {
     background-color: #61ac77;
     color: white;
     border: none;
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;
-    width: 150px;
+
 }
 
-button:hover {
+#addBtn:hover {
     background-color: #4caf50;
     color: white;
 }
 
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
 
 li {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #f9f9f9;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    margin: 10px 0;
+    font-family: 'Permanent Marker', cursive;
 }
 
-li span {
-    flex: 1;
-}
-
-li button {
-    background-color: #f44336;
+li .delBtn {
+    background-color: #f01212;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 5px;
+    border-radius: 25px;
+    padding: 10px;
     cursor: pointer;
+    margin-left: 350px;
+}
+
+li button:hover {
+    background-color: #cb4242;
+    color: white;
+}
+
+#error {
+    display: none;
+    font-family: 'Tourney', cursive;
+}
+
+#congrats {
+    display: none;
+    font-family: 'Tourney', cursive;
+}
+
+
+li input[type="checkbox"] {
+    margin-right: 10px;
+    margin-top: 0;
 }
