--- a/epicodeCorso/esercizi/week_3/day3/to-do list/assets/css/todolist.css
+++ b/epicodeCorso/esercizi/week_3/day3/to-do list/assets/css/todolist.css
@@ -1,37 +1,38 @@
-
-html, body {
+html,
+body {
     margin: 0 auto;
     padding: 0;
     border: 0;
     font-family: 'Roboto', sans-serif;
 }
 
-#container{
+#container {
     background: #6670ff;
-    padding: 30px;   
+    padding: 30px;
     display: flex;
     flex-direction: column;
 }
 
-#container h3, #container h1{
+#container h3,
+#container h1 {
     color: white;
     text-align: center;
     margin-bottom: 15px;
     height: auto;
 }
 
-fieldset{
+fieldset {
     display: flex;
     width: 100%;
 }
 
-#newTask{
+#newTask {
     width: 100%;
     border: none;
     padding: 14px;
 }
 
-#addTask{
+#addTask {
     width: 30%;
     cursor: pointer;
     background: #283a79;
@@ -40,22 +41,23 @@ fieldset{
     font-size: 18px;
 }
 
-#list{
+#list {
     display: flex;
     flex-direction: column;
     margin: 10px 0;
     list-style: none;
 }
 
-#list li{
+
+#list li {
     padding: 12px;
     background: white;
     border: 1px solid #2c45a3;
-    display:flex;
+    display: flex;
     justify-content: space-between;
 }
 
-.delBtn{
+.delBtn {
     padding: 10px;
     cursor: pointer;
     border: none;
