--- a/epicodeCorso/Units/Unit2/Week1/day3/assets/css/navbar.css
+++ b/epicodeCorso/Units/Unit2/Week1/day3/assets/css/navbar.css
@@ -1,8 +1,15 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 nav ul {
     margin: 0;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 nav {
@@ -12,30 +19,31 @@ nav {
     padding: 20px 10px;
     background-color: #fbf7e3;
     color: #612406;
-    border-radius: 60px;
 }
 
 ul li img {
     width: 40px;
     margin-right: 10px;
-    pad: 40px;
 }
 
 ul li {
+    width: 85px;
     list-style-type: none;
     padding: 0.5em 1em;
     border: none;
     border-radius: 60px;
     background-color: #f3df85;
     text-align: center;
-    margin-right: 8px;
+    margin-right: 30px;
 }
 
 .shop-logo {
     display: flex;
     justify-content: space-between;
+    font-size: 1em;
     /*flex-grow: 1;*/
 }
+
 
 .shop-logo span {
     align-self: center;
@@ -43,25 +51,41 @@ ul li {
     font-size: 20px;
 }
 
+h1 {
+    color: #612406;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: bold;
+}
 
-@media screen and (min-width: 320px) {
-    ul:nth-child(1) {
-        order: 2;
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .shop-logo {
+        order: -1;
+        font-size: 60px;
     }
 
-    ul:nth-child(2) {
-        order: 3;
+    .shop-logo span {
+        font-size: 40px;
     }
 
-    ul:nth-child(3) {
-        order: 1;
+    nav ul {
+        justify-content: space-around;
     }
 
-    ul:nth-child(4) {
-        order: 3;
+    ul li {
+        margin: 5px;
     }
 
-    ul:nth-child(5) {
-        order: 1;
+    ul img {
+        margin-left: -30px;
+        padding-right: 5px;
     }
 }
+
+@media screen and (min-width: 481px) and (max-width: 576px) {}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {}
