--- a/epicodeCorso/Units/Unit2/Week2/day4/scss/_mixins.scss
+++ b/epicodeCorso/Units/Unit2/Week2/day4/scss/_mixins.scss
@@ -1,6 +1,19 @@
-@mixin flex{
+@mixin flex ($direction, $space){
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: $direction;
+    justify-content: $space;
     align-items: center;
 }
+
+@mixin title-big{
+    font-weight: bolder;
+    font-size: 2rem;
+    color: darkslategray;
+}
+
+@mixin floating{
+    border-radius: 60px;
+    box-shadow: 10px 5px 5px rgb(122, 30, 227);
+    border: 1px solid rgb(158, 98, 231);
+}
+
