--- a/epicodeCorso/Units/Unit2/Week2/day4/css/style.css
+++ b/epicodeCorso/Units/Unit2/Week2/day4/css/style.css
@@ -1,10 +1,73 @@
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap");
 nav {
-  width: 100vh;
-  background-color: rgb(78, 49, 244);
+  width: 100vw;
+  background-color: rgb(152, 143, 205);
 }
 nav .navBtn {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  position: fixed top;
+}
+nav img {
+  width: 55px;
+}
+nav a {
+  text-decoration: none;
+  font-weight: 30px;
+  font-family: "Oxygen", sans-serif;
+  font-weight: bold;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.buttons_hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-items: stretch;
+}
+.buttons_hero .btn__Hero1, .buttons_hero .btn__Hero3, .buttons_hero .btn__Hero2 {
+  width: 100px;
+  font-size: 15px;
+  padding: 5px;
+  background-color: #0e6cff;
+  border-radius: 60px;
+}
+.buttons_hero .btn__Hero2 {
+  background-color: #ff8700;
+}
+.buttons_hero .btn__Hero3 {
+  background-color: #4cad50;
+}
+
+* {
+  font-family: "Oxygen", sans-serif;
+  color: #f4f4f4;
+}
+
+.hero {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #640fc5;
+}
+.hero img {
+  padding: 20px;
+  border-radius: 60px;
+  box-shadow: 10px 5px 5px rgb(122, 30, 227);
+  border: 1px solid rgb(158, 98, 231);
+}
+.hero p {
+  padding: 30px;
 }/*# sourceMappingURL=style.css.map */
