--- a/epicodeCorso/Units/Unit2/Week2/day5/assets/css/Netflix.css
+++ b/epicodeCorso/Units/Unit2/Week2/day5/assets/css/Netflix.css
@@ -1,3 +1,11 @@
+html,
+body {
+    width: 100vw;
+    max-width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
+}
+
 .form-select {
     width: 120px;
     padding-left: -15px;
@@ -54,4 +62,20 @@ header a img {
 
 .btn__btns :nth-child(1) {
     font-weight: bold;
+}
+
+/*
+.carousel-inner .row .col-sm-2 {
+    display: inline-block;
+}
+*/
+
+.carousel-item {
+    width: calc(100% / 6);
+}
+
+@media (max-width: 767.98px) {
+    .carousel-item {
+        width: calc(100% / 1);
+    }
 }
