--- a/epicodeCorso/Units/Unit2/Week3/day3/assets/scss/app.scss
+++ b/epicodeCorso/Units/Unit2/Week3/day3/assets/scss/app.scss
@@ -3,4 +3,13 @@ body{
     padding: 0;
     box-sizing: border-box;
     background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(23,150,210,1) 50%, rgba(15,130,173,1) 100%);}
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(23,150,210,1) 50%, rgba(15,130,173,1) 100%);
+}
+
+.container{
+    .card-img-top {
+        height: 350px !important;
+         
+      }
+      
+}
