--- a/epicodeCorso/Units/BuildWeeks/BuildWeek_2/Album_page.css
+++ b/epicodeCorso/Units/BuildWeeks/BuildWeek_2/Album_page.css
@@ -1,8 +1,6 @@
+/* --- Album Section ---*/
+
 body {
-    width: 100vw !important;
-    max-width: 100vw !important;
-    height: 100vh !important;
-    max-height: 100vh !important;
     font-family: 'Roboto', sans-serif;
     background-color: #caae48;
 }
